--- a/web/index.html
+++ b/web/index.html
@@ -31,6 +31,11 @@
 
   <title>swapngive</title>
   <link rel="manifest" href="manifest.json">
+
+  <!-- Google Maps API -->
+  <script src="https://maps.googleapis.com/maps/api/js?key=
+  AIzaSyB0zTZeKwdZ0ACJHZB7tEUzQrU76d2m2no"></script>
+
 </head>
 <body>
   <script src="flutter_bootstrap.js" async></script>
